...
// NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM,
// DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
// OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.

"backBarButton" = "Back";
"mobileTransferMethodsHeader" = "Transfer methods";
"remove" = "Remove";
"cancelButtonLabel" = "Cancel";
"doneButtonLabel" = "Done";
"edit" = "Edit";
"try_again_button_label" = "Try Again";
"search_placeholder_label" = "Search";
"unexpected_error_message" = "Something went wrong, please try again";
"network_connection_error_title" = "Connectivity Issue";
...
"error" = "Error";
"authentication_error_title" = "Authentication Error";
"authentication_error_message" = "Authentication token retrieval attempt resulted in an error";
"no_fee" = "No fee";

// Transfer methods
"bank_account" = "Bank Account";
"bank_card" = "Debit Card";
"paper_check" = "Paper Check";
"prepaid_card" = "Prepaid Card";
"wire_account" = "Wire Transfer Account";
"paypal_account" = "PayPal Account";
"venmo_account" = "Venmo Account";
"cash_pickup_mg" = "MoneyGram";

"visa" = "Visa";
"mastercard" = "Mastercard";

// Manage Prepaid Card Message
...
